more sensor graph work, removed aria-labels and supressing warning messages

--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -27,14 +27,14 @@
         <md-toolbar class="panel-toolbar md-whiteframe-z1" ng-mouseenter="showUserTools = true;" ng-mouseleave="showUserTools = false;">
             <div class="unselectable md-toolbar-tools" layout="row">
                 <span flex ng-click="vm.setOrderBy('id')" style="cursor: pointer;"><span>katGUI Users<md-tooltip>Sort by database ID</md-tooltip></span></span>
-                <md-checkbox md-theme="{{themePrimaryButtons}}" class="fade-in md-primary" aria-label="Show Deactivated Users" ng-show="showUserTools || vm.showDeactivatedUsers"
+                <md-checkbox md-theme="{{themePrimaryButtons}}" class="fade-in md-primary"  ng-show="showUserTools || vm.showDeactivatedUsers"
                              style="font-size: 14px;" ng-model="vm.showDeactivatedUsers">
                     Show Deactivated Users
                 </md-checkbox>
 
                 <input class="fade-in search-input-box" style="min-width: 250px;" ng-show="showUserTools || q || vm.showDeactivatedUsers" type="search"
                        ng-model-options="{ debounce: 300 }" ng-model="q" placeholder="Search Users..."/>
-                <md-button aria-label="Create A User" style="margin-right: 8px;" ng-click="vm.createUser()" class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}">
+                <md-button  style="margin-right: 8px;" ng-click="vm.createUser()" class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}">
                     <span class="fa fa-plus" style="margin-top: 2px;"></span>
                     <md-tooltip>Create A User</md-tooltip>
                 </md-button>
