--- a/app/operator-control/operator-control.html
+++ b/app/operator-control/operator-control.html
@@ -7,11 +7,11 @@
             </div>
         </md-toolbar>
         <section md-theme="{{themePrimaryButtons}}" layout="row" layout-align="center center" class="operator-controls">
-            <md-button ng-click="vm.inhibitAll()" aria-label="Inhibit All" class="md-raised md-primary">Inhibit All</md-button>
-            <md-button ng-click="vm.stowAll()" aria-label="Stow All" class="md-raised md-primary">Stow All</md-button>
-            <md-button ng-click="vm.stopAll()" aria-label="Stop All" class="md-raised md-primary">Stop All</md-button>
-            <md-button ng-click="vm.resumeOperations()" aria-label="Resume Operations" class="md-raised md-primary">Resume Operations</md-button>
-            <md-button disabled ng-click="shutdownComputing()" aria-label="Shutdown Computing" class="md-raised md-primary">Shutdown Computing</md-button>
+            <md-button ng-click="vm.inhibitAll()"  class="md-raised md-primary">Inhibit All</md-button>
+            <md-button ng-click="vm.stowAll()"  class="md-raised md-primary">Stow All</md-button>
+            <md-button ng-click="vm.stopAll()"  class="md-raised md-primary">Stop All</md-button>
+            <md-button ng-click="vm.resumeOperations()"  class="md-raised md-primary">Resume Operations</md-button>
+            <md-button disabled ng-click="shutdownComputing()"  class="md-raised md-primary">Shutdown Computing</md-button>
         </section>
 
         <md-list class="receptor-state-list">
