--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -5,16 +5,16 @@
     </md-toolbar>
 
     <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('alarms')" aria-label="Alarms">Alarms</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('health')" aria-label="Health and State">Health and State</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('receptorStatus')" aria-label="Receptor Status">Receptor Status</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('operator-control')" aria-label="Operator Control">Operator Control</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('scheduler')" aria-label="Scheduler Home">Scheduler</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('sensor-graph')" aria-label="Sensor Graphs">Sensor Graphs</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('weather')" aria-label="Weather">Weather</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('alarms')" >Alarms</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('health')" >Health and State</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('receptorStatus')" >Receptor Status</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('operator-control')" >Operator Control</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('scheduler')" >Scheduler</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('sensor-graph')" >Sensor Graphs</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('weather')" >Weather</md-button>
     </div>
     <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('admin')" aria-label="Admin">User Administration</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('config')" aria-label="Config">KATGUI Configuration</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('admin')" >User Administration</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('config')" >KATGUI Configuration</md-button>
     </div>
 </div>
