--- a/app/health/custom-health/custom-health.html
+++ b/app/health/custom-health/custom-health.html
@@ -3,7 +3,7 @@
          ng-class="{'transparent-legend':transparentLegend && !showLegend}">
         <md-button flex style="pointer-events: auto; width: 36px; height: 40px;" md-theme="{{themePrimaryButtons}}" ng-init="showLegend = false" ng-click="showLegend = !showLegend"
                    ng-mouseenter="transparentLegend = false" ng-mouseleave="transparentLegend = true"
-                   aria-label="Show Legend" class="md-primary md-raised md-icon-button">
+                    class="md-primary md-raised md-icon-button">
             <md-icon md-theme="white" class="fa md-primary" ng-show="!showLegend" md-font-icon="fa-eye" title="Show Legend"></md-icon>
             <md-icon md-theme="white" class="fa md-primary" ng-show="showLegend" md-font-icon="fa-eye-slash" title="Hide Legend"></md-icon>
         </md-button>
@@ -19,7 +19,7 @@
     </div>
     <div layout="row" md-theme="{{themePrimaryButtons}}">
         <input type="text" style="width: 600px;" ng-model="vm.regex" placeholder="Enter Regex" ng-init="vm.regex = 'anc:bms_kapb_*'"/>
-        <md-button id="btnBuildView" ng-click="vm.buildView(vm.regex)" aria-label="Build View" class="md-primary md-raised" style="font-size: 14px; margin-left: 8px;">Build View</md-button>
+        <md-button id="btnBuildView" ng-click="vm.buildView(vm.regex)"  class="md-primary md-raised" style="font-size: 14px; margin-left: 8px;">Build View</md-button>
     </div>
     <div flex layout="row" style="margin-top: 4px;">
         <status-single-level-tree-map flex layout-mode="dice" style="display: inline-block; margin-left: 4px; margin-right:4px;"
