--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -6,7 +6,7 @@
                 <span flex style="max-height: 10px;"></span>
                 <input class="fade-in search-input-box" ng-show="showDraftTools || vm.q" type="search"
                        ng-model-options="{ debounce: 300 }" ng-model="vm.q" placeholder="Search Drafts..."/>
-                <md-button aria-label="Save All Changes" style="font-size: 16px; margin-top: -5px;margin-right: -5px;"
+                <md-button  style="font-size: 16px; margin-top: -5px;margin-right: -5px;"
                            class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}"
                            ng-click="vm.saveAllDirtyDrafts()">
                     <md-icon class="fa" md-font-icon="fa-check" style="margin-top: -8px"></md-icon>
@@ -57,24 +57,24 @@
                         <i>{{::item.owner}}</i>
                     </div>
                     <input ng-change="item.isDirty = true;" type="text" ng-click="vm.setSelectedScheduleDraft(item, true); $event.stopPropagation();" flex
-                           aria-label="Description" class="schedule-item-description-input" style="height: 27px;"
+                            class="schedule-item-description-input" style="height: 27px;"
                            ng-model="item.description" placeholder="Description"/>
 
-                    <md-select ng-model="item.type" aria-label="Schedule Draft Type" style="width: 134px; margin-left: 4px; margin-right:4px;"
+                    <md-select ng-model="item.type"  style="width: 134px; margin-left: 4px; margin-right:4px;"
                                ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
                                class="md-primary" ng-click="item.isDirty = true; vm.setSelectedScheduleDraft(item, true); $event.stopPropagation();">
                         <md-option ng-value="type" ng-repeat="type in vm.types">{{type}}</md-option>
                     </md-select>
-                    <input ng-change="item.isDirty = true; vm.validateInputDate(item);" type="text" aria-label="Select a Date and Time" title="UTC"
+                    <input ng-change="item.isDirty = true; vm.validateInputDate(item);" type="text"  title="UTC"
                            class="schedule-item-input schedule-item-date-input" ng-class="{'invalid-date-error': item.hasInvalidInput}"
                            ng-click="vm.openDatePicker(item, $event);" ng-model="item.desired_start_time" placeholder=""/>
                     <span class="sb-row-button" ng-show="!item.isDirty"></span>
                     <span ng-if="item.pendingVerify" class="sb-row-button"></span>
-                    <button ng-if="!item.pendingVerify" title="Save the draft" ng-show="item.isDirty" style="transition: 0s;" aria-label="Save Draft" class="sb-row-button"
+                    <button ng-if="!item.pendingVerify" title="Save the draft" ng-show="item.isDirty" style="transition: 0s;"  class="sb-row-button"
                                ng-click="vm.saveDraft(item); $event.stopPropagation();">
                         <span class="fa fa-check"></span>
                     </button>
-                    <button ng-if="!item.pendingVerify" style="transition: 0s;" aria-label="Show Edit Menu" class="sb-row-button" ng-click="vm.openSchedulerEditMenu(item, $event);">
+                    <button ng-if="!item.pendingVerify" style="transition: 0s;"  class="sb-row-button" ng-click="vm.openSchedulerEditMenu(item, $event);">
                         <span class="fa fa-ellipsis-v"></span>
                     </button>
                 </div>
