--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -1,16 +1,74 @@
 <div flex layout="column" ng-controller="SensorGraphCtrl as vm" md-theme="{{themePrimary}}">
 
     <div flex layout="column" class="md-whiteframe-z1" style="margin: 8px;">
-        <md-toolbar class="md-toolbar-tools-medium md-whiteframe-z1">
-            <span flex>Sensor List</span>
-            <md-checkbox class="md-primary alarms-tools-checkbox" md-theme="{{themePrimaryButtons}}" style="margin-right: 32px;"
-                         ng-model="vm.showGridLines" aria-label="Show Grid Lines">Show Grid Lines</md-checkbox>
-            <input class="search-input-box" style="min-width: 350px;" ng-model="vm.sensorInput" placeholder="Add Sensor"/>
-            <md-button aria-label="Add Sensor" class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}" ng-click="vm.addSensor(vm.sensorInput)">
-                <md-icon style="margin-top: -8px;" md-font-icon="fa-plus" class="fa"></md-icon>
-            </md-button>
+        <datetimepicker md-theme="default" id="datePickerMenu" class="datepickerMenu md-whiteframe-z1"
+                        ng-init="vm.showDatePicker = false"
+                        style="position: absolute; right:235px; top: 68px; color: #333333;"
+                        ng-show="vm.showDatePicker" data-ng-model="vm.sensorStartDatetime"
+                        vm.showDatePicker=false;"
+                        data-on-set-time="vm.showDatePicker = false; vm.onTimeSet(newDate)"></datetimepicker>
+        <md-toolbar layout="row" layout-align="end center" class="md-whiteframe-z1 ">
+            <div flex layout="row" layout-align="center center" md-theme="{{themePrimaryButtons}}"
+                 class="md-toolbar-tools-medium">
+                <md-chips flex class="chips-flex" ng-model="vm.sensorNames" readonly="false">
+                    <md-chip-template>
+                        <strong>{{$chip}}</strong>
+                    </md-chip-template>
+                </md-chips>
+
+                <md-input-container md-no-float style="margin-left: 16px;">
+                    <input type="text" ng-change="vm.startTimeChange()" class=""
+                           ng-focus="vm.showDatePicker = true;" ng-blur="vm.showDatePicker = false;"
+                           ng-model="vm.sensorStartDateReadable" placeholder="Start Date"
+                           ng-class="{'input-error':vm.dateTimeError}" title="Format: 'yyyy-MM-dd HH:mm:ss'"/>
+                </md-input-container>
+
+                <md-switch ng-init="vm.plusMinus = false" class="md-primary" ng-model="vm.plusMinus"
+
+                           style="font-size: 34px; min-width: 65px; margin-right: -10px;">
+                    {{vm.plusMinus? '+' : '-'}}
+                </md-switch>
+                <md-input-container md-no-float>
+                    <input ng-init="vm.unitLength = 1" type="number" min="1" max="9999"
+                           style="background: transparent; width: 55px; height: 30px; text-align: end;"
+                           placeholder="" ng-model="vm.unitLength" title="Range Unit Length">
+                </md-input-container>
+
+                <md-select ng-init="vm.unitType = 'h'" ng-model="vm.unitType"
+                           style="min-width: 105px; margin-left: 8px; margin-top: 2px;">
+                    <md-option value="s">Second(s)</md-option>
+                    <md-option value="m">Minute(s)</md-option>
+                    <md-option value="h">Hour(s)</md-option>
+                    <md-option value="d">Day(s)</md-option>
+                </md-select>
+
+                <md-button class="md-icon-button md-primary md-raised"
+                           style="height: 100%; width: 36px; margin-left: 8px; font-size: 18px;"
+                           ng-disabled="vm.dateTimeError"
+                           md-theme="{{themePrimaryButtons}}" ng-click="vm.findSensors()">
+                    <md-icon md-font-icon="fa-search-plus" class="fa"></md-icon>
+                </md-button>
+            </div>
         </md-toolbar>
-        <multi-line-chart flex data="vm.sensorData" redraw-function="vm.redrawChart" show-grid-lines="vm.showGridLines"></multi-line-chart>
+        <multi-line-chart flex data="vm.sensorData" redraw-function="vm.redrawChart" clear-function="vm.clearChart"
+                          show-grid-lines="vm.showGridLines"></multi-line-chart>
+        <div layout="row" class="floating-chart-actions">
+            <md-button class="md-icon-button"
+                       ng-click="vm.showHelp($event)">
+                <md-icon class="fa" md-font-icon="fa-question"></md-icon>
+            </md-button>
+            <md-button class="md-icon-button"
+                       ng-click="vm.clearData()" title="Clear Data">
+                <md-icon class="fa" md-font-icon="fa-remove"></md-icon>
+            </md-button>
+            <md-button class="md-icon-button"
+                       ng-click="alert('not implemented')" title="Additional Actions">
+                <md-icon class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
+            </md-button>
+        </div>
+
     </div>
+</div>
+
 
 </div>
