--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -5,7 +5,7 @@
             <span class="md-toolbar-tools" flex>{{::currentUser.name}}'s Account Details</span>
         </md-toolbar>
         <div style="width: 100%; height: auto;">
-            <div class="md-whiteframe-z3" flex layout="row" layout-align="start center" style="background: white; margin: 32px; height: 80px; overflow: auto;">
+            <div class="md-whiteframe-z3" flex layout="row" layout-align="start center" style="margin: 32px; height: 80px; overflow: auto;">
                 <div flex style="min-width: 265px; text-align: center; display: inline-block;" layout="row">
                     <span class="cell-span">{{::currentUser.name}}<md-tooltip>My Name</md-tooltip></span>
                 </div>
@@ -34,8 +34,8 @@
 
                 <input class="fade-in search-input-box" style="min-width: 250px;" ng-show="showUserTools || q || vm.showDeactivatedUsers" type="search"
                        ng-model-options="{ debounce: 300 }" ng-model="q" placeholder="Search Users..."/>
-                <md-button  style="margin-right: 8px;" ng-click="vm.createUser()" class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}">
-                    <span class="fa fa-plus" style="margin-top: 2px;"></span>
+                <md-button  style="margin-right: 8px;" ng-click="vm.createUser()" class="md-icon-button" md-theme="{{themePrimaryButtons}}">
+                    <md-icon class="fa" md-font-icon="fa-plus" style="margin-top: 8px;"></md-icon>
                     <md-tooltip>Create A User</md-tooltip>
                 </md-button>
             </div>
@@ -59,16 +59,16 @@
             </div>
         </md-toolbar>
 
-        <div id="userListId" flex class="user-list">
-            <div class="user-row animate-repeat" flex layout="row" layout-align="start center" style="background: white;"
+        <div id="userListId" flex class="user-list" md-theme="{{themePrimaryButtons}}">
+            <div class="user-row animate-repeat" flex layout="row" layout-align="start center"
                  ng-repeat="user in vm.userData | filter:{activated: !vm.showDeactivatedUsers} | regexSearch:vm.orderByFields:q | orderBy:vm.orderBy.value:vm.orderBy.reverse track by user.id"
                  ng-if="user.activated || vm.showDeactivatedUsers" ng-class="{ 'deactivated-user': !user.activated, 'activated-user': user.activated }">
-                <input flex type="text" placeholder="Name" class="user-admin-input" md-theme="{{themeSecondary}}" ng-attr-id="{{ 'user-name-input-' + user.name }}"
+                <input flex type="text" placeholder="Name" class="user-admin-input" md-theme="{{themePrimary}}" ng-attr-id="{{ 'user-name-input-' + user.name }}"
                        label="Name" ng-disabled="!user.editing" ng-model="user.name" style="max-width: 265px; min-width: 265px;"/>
-                <input flex type="text" class="user-admin-input" style="max-width: 265px; min-width: 265px;" placeholder="Name" md-theme="{{themeSecondary}}"
+                <input flex type="text" class="user-admin-input" style="max-width: 265px; min-width: 265px;" placeholder="Name" md-theme="{{themePrimary}}"
                        label="Email" ng-disabled="!user.editing" ng-model="user.email" title="Email"/>
                 <md-select flex ng-disabled="!user.editing" ng-model="user.roles" multiple style="margin-left: 4px; margin-right:8px;"
-                           class="md-primary md-select-custom-disabled-text" md-theme="{{themePrimaryButtons}}" placeholder="No Roles Assigned">
+                            class="md-primary"  placeholder="No Roles Assigned">
                     <md-option ng-value="role.value" ng-repeat="role in vm.userRoles">{{role.name}}</md-option>
                 </md-select>
 
