--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -1,57 +1,114 @@
-<div flex layout="column" ng-controller="SensorGraphCtrl as vm" md-theme="{{themePrimary}}">
+<div flex layout="row" ng-controller="SensorGraphCtrl as vm" md-theme="{{themePrimary}}" ng-click="vm.showDatePicker = false;">
 
-    <div flex layout="column" class="md-whiteframe-z1" style="margin: 8px;">
-        <datetimepicker md-theme="default" id="datePickerMenu" class="datepickerMenu md-whiteframe-z1"
-                        ng-init="vm.showDatePicker = false"
-                        style="position: absolute; right:235px; top: 68px; color: #333333;"
-                        ng-show="vm.showDatePicker" data-ng-model="vm.sensorStartDatetime"
-                        vm.showDatePicker=false;"
-                        data-on-set-time="vm.showDatePicker = false; vm.onTimeSet(newDate)"></datetimepicker>
-        <md-toolbar layout="row" layout-align="end center" class="md-whiteframe-z1 ">
-            <div flex layout="row" layout-align="center center" md-theme="{{themePrimaryButtons}}"
-                 class="md-toolbar-tools-medium">
-                <md-chips flex class="chips-flex" ng-model="vm.sensorNames" readonly="false">
-                    <md-chip-template>
-                        <strong>{{$chip}}</strong>
-                    </md-chip-template>
-                </md-chips>
+    <div layout="column" style="margin: 8px;">
+        <md-toolbar layout="row" class="md-whiteframe-z1 md-toolbar-tools-medium">
+            Sensor Graph Tools
+        </md-toolbar>
+        <div flex class="md-whiteframe-z1" layout="column" layout-align="start center"
+             md-theme="{{themePrimaryButtons}}" style="overflow: auto; position: relative;">
 
-                <md-input-container md-no-float style="margin-left: 16px;">
+            <datetimepicker id="datePickerMenu" class="datepickerMenu md-whiteframe-z1"
+                            ng-init="vm.showDatePicker = false"
+                            style="position: absolute; left:23px; top: 46px; color: #333333;"
+                            ng-show="vm.showDatePicker" data-ng-model="vm.sensorStartDatetime"
+                            ng-keypress="vm.showDatePicker = false"
+                            vm.showDatePicker=false;"
+                            ng-click="$event.stopPropagation()"
+                            data-on-set-time="vm.showDatePicker = false; vm.onTimeSet(newDate)"></datetimepicker>
+
+            <div layout="row">
+                <md-input-container md-no-float style="margin-top: 3px; padding: 0; width: 135px;">
                     <input type="text" ng-change="vm.startTimeChange()" class=""
-                           ng-focus="vm.showDatePicker = true;" ng-blur="vm.showDatePicker = false;"
                            ng-model="vm.sensorStartDateReadable" placeholder="Start Date"
-                           ng-class="{'input-error':vm.dateTimeError}" title="Format: 'yyyy-MM-dd HH:mm:ss'"/>
+                           ng-class="{'input-error':vm.dateTimeError}" title="Format: 'yyyy-MM-dd HH:mm:ss'"
+                           ng-click="$event.stopPropagation()"/>
                 </md-input-container>
+                <md-button class="md-icon-button" style="margin-left: 0px; margin-top: 3px; width: 40px; height: 40px;"
+                    ng-click="vm.showDatePicker = !vm.showDatePicker; $event.stopPropagation()">
+                    <md-icon class="fa" md-font-icon="fa-calendar"></md-icon>
+                </md-button>
 
+            </div>
+
+            <div layout="row" layout="center center" style="margin-top: -10px;">
                 <md-switch ng-init="vm.plusMinus = false" class="md-primary" ng-model="vm.plusMinus"
-
-                           style="font-size: 34px; min-width: 65px; margin-right: -10px;">
+                           style="font-size: 34px; min-width: 65px; margin-right: -10px; margin-top: 12px">
                     {{vm.plusMinus? '+' : '-'}}
                 </md-switch>
-                <md-input-container md-no-float>
-                    <input ng-init="vm.unitLength = 1" type="number" min="1" max="9999"
-                           style="background: transparent; width: 55px; height: 30px; text-align: end;"
+                <md-input-container md-no-float style="padding: 0; vertical-align: middle">
+                    <input ng-init="vm.unitLength = 1" type="number" min="1" max="999"
+                           style="font-size: 16px; background: transparent; width: 45px; text-align: end; max-height: 30px; margin-top:21px;"
                            placeholder="" ng-model="vm.unitLength" title="Range Unit Length">
                 </md-input-container>
 
-                <md-select ng-init="vm.unitType = 'h'" ng-model="vm.unitType"
-                           style="min-width: 105px; margin-left: 8px; margin-top: 2px;">
+                <md-select md-theme="{{themePrimaryButtons}}" ng-init="vm.unitType = 'h'" ng-model="vm.unitType"
+                           style="min-width: 105px;">
                     <md-option value="s">Second(s)</md-option>
                     <md-option value="m">Minute(s)</md-option>
                     <md-option value="h">Hour(s)</md-option>
                     <md-option value="d">Day(s)</md-option>
                 </md-select>
+            </div>
 
-                <md-button class="md-icon-button md-primary md-raised"
-                           style="height: 100%; width: 36px; margin-left: 8px; font-size: 18px;"
-                           ng-disabled="vm.dateTimeError"
-                           md-theme="{{themePrimaryButtons}}" ng-click="vm.findSensors()">
-                    <md-icon md-font-icon="fa-search-plus" class="fa"></md-icon>
-                </md-button>
+            <md-input-container md-no-float class="sensor-search-input">
+                <input type="text" ng-change="vm.validateSearchInputLength(vm.sensorSearchStr)"
+                       placeholder="Search for sensors..." ng-model="vm.sensorSearchStr"
+                       ng-keypress="vm.findSensorNames(vm.sensorSearchStr, $event)"
+                       ng-class="{'input-error':vm.sensorSearchFieldLengthError}" title="Start Typing to Search"/>
+                <md-tooltip md-visible="vm.sensorSearchFieldShowTooltip" md-direction="right" md-autohide="false">
+                    Type a name and press enter
+                </md-tooltip>
+            </md-input-container>
+            <md-list class="sensor-search-name-list unselectable md-whiteframe-z1" ng-if="!vm.waitingForSearchResult">
+                <md-list-item ng-repeat="sensor in vm.sensorSearchNames track by $index"
+                              ng-click="vm.searchSensorClicked(sensor);">
+                    <span>{{::sensor.name}}</span>
+                </md-list-item>
+            </md-list>
+            <div layout="row" layout-align="center center" class="sensor-search-name-list unselectable md-whiteframe-z1" ng-show="vm.waitingForSearchResult"
+                style="background: rgba(158,158,158,0.1)">
+                <span style="font-size: 60px;" class="fa fa-refresh fa-spin"></span>
+            </div>
+            <div style="width: 100%; margin-top: 4px;" layout="row" layout-align="center center">
+                <span ng-show="vm.sensorSearchNames.length === 1000" title="Refine the search to see more sensors"
+                      class="fa fa-warning"></span>
+                <span ng-show="vm.sensorSearchNames.length > 1" style="margin-left: 4px;">Displaying {{vm.sensorSearchNames.length}} results.</span>
+                <span ng-show="vm.sensorSearchNames.length === 1" style="margin-left: 4px;">There is 1 result.</span>
+                <span ng-show="vm.sensorSearchNames.length === 0" style="margin-left: 4px;">There are no results.</span>
+            </div>
+
+            <div layout="column" style="width: 100%;">
+                <md-checkbox class="md-primary" ng-model="vm.showGridLines" ng-change="vm.showGridLinesChanged()">
+                    Show Grid Lines
+                </md-checkbox>
+            </div>
+        </div>
+    </div>
+
+    <div flex layout="column" class="md-whiteframe-z1" style="margin: 8px;">
+        <md-toolbar layout="row" layout-align="end center" class="md-whiteframe-z1 ">
+            <div flex layout="row" layout-align="center center" md-theme="{{themePrimaryButtons}}"
+                 class="md-toolbar-tools-medium">
+                <md-chips flex class="custom-chips" ng-model="vm.sensorNames" readonly="true">
+                    <md-chip-template>
+                        <span>
+                          <strong>{{$chip.name}}</strong>
+                        </span>
+                    </md-chip-template>
+                    <button md-chip-remove ng-click="vm.chipRemovePressed($chip)" class="md-primary sensor-name-chip">
+                        <md-icon md-svg-icon="close"></md-icon>
+                    </button>
+                </md-chips>
+                <!--<md-button class="md-icon-button md-primary md-raised"-->
+                <!--style="height: 100%; width: 36px; margin-left: 8px; font-size: 18px;"-->
+                <!--ng-disabled="vm.dateTimeError"-->
+                <!--md-theme="{{themePrimaryButtons}}" ng-click="vm.findSensorData()">-->
+                <!--<md-icon md-font-icon="fa-search-plus" class="fa"></md-icon>-->
+                <!--</md-button>-->
             </div>
         </md-toolbar>
-        <multi-line-chart flex data="vm.sensorData" redraw-function="vm.redrawChart" clear-function="vm.clearChart"
-                          show-grid-lines="vm.showGridLines"></multi-line-chart>
+        <multi-line-chart flex style="margin-top: 32px;" data="vm.sensorData" redraw-function="vm.redrawChart"
+                          clear-function="vm.clearChart" remove-sensor-function="vm.removeSensorLine"></multi-line-chart>
         <div layout="row" class="floating-chart-actions">
             <md-button class="md-icon-button"
                        ng-click="vm.showHelp($event)">
@@ -68,7 +125,4 @@
         </div>
 
     </div>
-</div>
-
-
 </div>
